--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="media-block media-block-wide-image space-above-lg">
                 <div class="media-text">
                     <p>
-                        During the CANSAT project's development, we successfully handled the technical integration and verified our prototype's functionality through various tests. We shared these successful results with the academic community through presentations at relevant departments in our university. These presentations offered a valuable opportunity to introduce our project to a wider audience and receive feedback. The insights gained from this feedback were highly constructive, reinforcing our design choices while also highlighting areas for improvement. Ultimately, the confidence and the technical skills honed during the CANSAT development were instrumental in our decision to take on the more ambitious KAYSAT project for the Teknofest competition.
+                        During the CANSAT project's development, we successfully handled the technical integration and verified our prototype's functionality through various tests. We shared these successful results with the academic community through presentations at relevant departments in our university. These presentations offered a valuable opportunity to introduce our project to a wider audience and receive feedback. The insights gained from this feedback were highly constructive, reinforcing our design choices while also highlighting areas for improvement. Ultimately, the confidence and the technical skills honed during the CANSAT development were instrumental in our decision to take on the more ambitious KAYSat project for the Teknofest competition.
                     </p>
                 </div>
                 <div class="media-image">
@@ -123,42 +123,28 @@
                 </div>
             </div>
 
-            <div class="media-block media-block-narrower-text">
-                <div class="media-text">
-                    <h4>Field Test & Ground Station</h4>
-                    <p>
-                        This image shows the wireless communication infrastructure and the data acquisition station working together. During outdoor tests, the connection established between the developed system and the ground station, along with the map interface, is highlighted.
-                    </p>
-                </div>
-                <div class="media-image">
-                    <img src="images/Ncts3.jpg" alt="Yer istasyonu ve harita arayüzü">
-                </div>
-            </div>
-        
-            <div class="media-block media-block-narrower-text">
-                <div class="media-image">
-                    <img src="images/Ncts4.jpeg" alt="Proje geliştirme ortamı">
-                </div>
-                <div class="media-text">
-                    <h4>Development & Prototyping</h4>
-                    <p>
-                        Reflecting the work environment during the development process, this shot showcases the density of electronic components, prototype circuits, and measurement instruments.
-                    </p>
-                </div>
-            </div>
-        
-            <div class="media-block media-block-narrower-text">
-                <div class="media-text">
-                    <h4>Real-Time Data Storage</h4>
-                    <p>
-                        This view showcases the real-time telemetry data being successfully logged to the Firebase database. Each data packet, received in JSON format, is meticulously recorded with a precise date and time stamp. This process not only ensures data integrity and traceability but also validates the successful operation of the entire end-to-end communication and storage system.
-                    </p>
-                </div>
-                <div class="media-image">
-                    <img src="images/firebase_data.png" alt="Firebase veritabanı anlık veri">
-                </div>
+            <h4>Field Test & Flight Images</h4>
+
+            <div class="field-test-item">
+                <img src="images/A2.jpeg" alt="Real-time data control during flight" class="showcase-image">
+                <p>
+                    Real-time control of incoming data from the Noctus06 satellite during its flight over the solid waste disposal site. This stage was critical for verifying the telemetry link and ensuring the accurate reception of sensor data.
+                </p>
             </div>
 
+            <div class="field-test-item">
+                <img src="images/A3.jpeg" alt="Integration of the CubeSat onto the drone platform" class="showcase-image">
+                <p>
+                    Integration of the Noctus06 CubeSat onto the drone platform followed by system checks. During this phase, the satellite's compatibility with the carrier system and its telemetry link were verified, while preliminary measurements were taken to calibrate the methane gas sensors.
+                </p>
+            </div>
+
+            <div class="field-test-item">
+                <img src="images/A1.jpeg" alt="Autonomous flight test of the Noctus06 CubeSat" class="showcase-image">
+                <p>
+                    Autonomous flight test of the Noctus06 CubeSat. Attached to a drone, the satellite collected data on methane gas levels during its flight over the solid waste disposal site. This test demonstrates a significant step toward the project's objective of atmospheric data collection and environmental monitoring.
+                </p>
+            </div>
             <h4>Conclusion and Learnings</h4>
             <p>
                 This project has provided practical experience in embedded systems programming, sensor integration, power management, and wireless communication. The successful real-time transfer of data in JSON format to a Flask and Electron-based interface demonstrates a complete system integration.
