--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <article class="project">
             <h3>NOCTUS-06 Functional CubeSat and <br> Ground Station Platform</h3>
             <p><em>Developed by: Ali Berkant Eker</em></p>
+            
             <div class="media-block">
                 <div class="media-image">
                     <img src="images/Ncts1.jpg" alt="NOCTUS-06 Satellite">
@@ -114,14 +115,10 @@
                     </ul>
                 </div>
             </div>
-            <h4>Conclusion and Learnings</h4>
-            <p>
-                This project has provided practical experience in embedded systems programming, sensor integration, power management, and wireless communication. The successful real-time transfer of data in JSON format to a Flask and Electron-based interface demonstrates a complete system integration.
-            </p>
-        </article>
-        
-        <article class="project">
-            <h3>NOCTUS-06: Flight Tests & Mission Simulation</h3>
+
+            <hr class="subsection-divider">
+
+            <h4>Flight Tests & Mission Simulation</h4>
             <p>
                 The project's final phase involved a critical mission simulation to test the end-to-end functionality of the NOCTUS-06 system. The CubeSat was deployed via a drone to perform real-world data acquisition. The following images document the key stages of this successful field test, from system integration to live data monitoring and autonomous flight.
             </p>
@@ -132,20 +129,22 @@
                     Real-time control of incoming data from the Noctus06 satellite during its flight over the solid waste disposal site. This stage was critical for verifying the telemetry link and ensuring the accurate reception of sensor data.
                 </p>
             </div>
-
             <div class="field-test-item">
                 <img src="images/A3.jpeg" alt="Integration of the CubeSat onto the drone platform" class="showcase-image">
                 <p>
                     Integration of the Noctus06 CubeSat onto the drone platform followed by system checks. During this phase, the satellite's compatibility with the carrier system and its telemetry link were verified, while preliminary measurements were taken to calibrate the methane gas sensors.
                 </p>
             </div>
-
             <div class="field-test-item">
                 <img src="images/A1.jpeg" alt="Autonomous flight test of the Noctus06 CubeSat" class="showcase-image">
                 <p>
                     Autonomous flight test of the Noctus06 CubeSat. Attached to a drone, the satellite collected data on methane gas levels during its flight over the solid waste disposal site. This test demonstrates a significant step toward the project's objective of atmospheric data collection and environmental monitoring.
                 </p>
             </div>
+            <h4>Conclusion and Learnings</h4>
+            <p>
+                This project has provided practical experience in embedded systems programming, sensor integration, power management, and wireless communication. The successful real-time transfer of data in JSON format to a Flask and Electron-based interface demonstrates a complete system integration.
+            </p>
         </article>
 
     </main>
