--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="field-test-item">
                 <img src="images/A1.jpeg" alt="Autonomous flight test of the Noctus06 CubeSat" class="showcase-image">
                 <p>
-                    Autonomous flight test of the Noctus06 CubeSat. Attached to a drone, the satellite collected data on methane gas levels during its flight over the solid waste disposal site. This test demonstrates a significant step toward the project's objective of atmospheric data collection and environmental monitoring.
+                    Autonomous flight test of the Noctus06 CubeSat. During its flight over the solid waste disposal site, the drone-mounted satellite collected a wide range of atmospheric data—including temperature, pressure, humidity, and other gas levels—with a primary focus on identifying methane sources. This test marks a significant step in demonstrating the project's capability for multi-parameter environmental monitoring.
                 </p>
             </div>
             <h4>Conclusion and Learnings</h4>
